--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <li> VaiSgrant </li>
          <li> Docker </li>
          <li> Ansible </li>
-         <li> Integración continua: integridad </li>
+         <li> Integración continua: desarrolo de software</li>
      </ul>
 </body>
 </html>
